--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -7,11 +7,49 @@
     android:background="#4A4A4A"
     tools:context=".Persona">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bac"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:background="@drawable/fondo3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/OBSERVACION2"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/button1"
+            android:onClick="GuardarPersona"
+            android:text="@string/guardar_persona"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/fondo1"
+            android:onClick="BotonesPersona"
+            android:text="@string/modulos"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@+id/OBSERVACION2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/OBSERVACION2" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <TabHost
         android:id="@+id/TABS"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/OBSERVACION2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
@@ -1014,20 +1052,6 @@
             </FrameLayout>
         </LinearLayout>
     </TabHost>
-
-    <Button
-        android:id="@+id/OBSERVACION2"
-        android:layout_width="290dp"
-        android:layout_height="35dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/button1"
-        android:onClick="GuardarPersona"
-        android:text="@string/guardar_persona"
-        android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
