--- a/app/src/main/res/layout/alert_guardar_familia.xml
+++ b/app/src/main/res/layout/alert_guardar_familia.xml
@@ -77,6 +77,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CALLE" />
 
+    <EditText
+        android:id="@+id/NUMEROSEGUNCARTOGRAFIA"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/edit_text_1"
+        android:ems="10"
+        android:gravity="center_horizontal|center_vertical"
+        android:hint="@string/numero_cartografia"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/NUMERO" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -91,11 +106,11 @@
         android:id="@+id/constraintLayout6"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginTop="10dp"
+        android:layout_margin="5dp"
         android:background="@drawable/fondo1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/NUMERO">
+        app:layout_constraintTop_toBottomOf="@+id/NUMEROSEGUNCARTOGRAFIA">
 
         <TextView
             android:id="@+id/textView10"
