--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,14 +67,24 @@
 
         </ListView>
 
+        <CheckBox
+            android:id="@+id/CHECKVIVIENDADESHABITADA"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/vivienda_deshabitada"
+            android:textColor="#000000"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout2"
             android:layout_width="200dp"
             android:layout_height="60dp"
-            android:layout_margin="5dp"
             android:background="@drawable/fondo2"
             android:onClick="NuevaPersona"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/CHECKVIVIENDADESHABITADA"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
