--- a/app/src/main/res/layout/alert_trastornos_mentales.xml
+++ b/app/src/main/res/layout/alert_trastornos_mentales.xml
@@ -25,12 +25,14 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/button1"
         android:text="@string/cancelar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
     <Button
         android:id="@+id/GUARDARTRANSTORNOSMENTALES"
@@ -46,6 +48,7 @@
         app:layout_constraintTop_toTopOf="@+id/CANCELARTRASTORNOSMENTALES" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_margin="10dp"
